--- a/index.html
+++ b/index.html
@@ -11,5 +11,15 @@
     <div id="game">
 
     </div>
+
+    <div id="movement">
+        <input type="button" id="left" value="&#706" onclick="directionHandler(null,37)">
+        <div>
+            <input type="button" id="up" value="&#708" onclick="directionHandler(null,38)">
+            <input style="background-color: rgba(0, 0, 0, 0);">
+            <input type="button" id="down" value="&#709" onclick="directionHandler(null,40)">
+        </div>
+        <input type="button" id="right" value="&#707" onclick="directionHandler(null,39)">
+    </div>
 </body>
 </html>
